# exif-ai

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config.sample.json
.github/workflows/: ci.yml  release.yml
assets/: exif-ai-gui.desktop  icon.icns
src/: config.rs  lib.rs  main.rs  pipeline.rs
src/ai/: cloudflare.rs  gemini.rs  local.rs  mod.rs  openai.rs
src/cli/: main.rs
src/exif/: mod.rs  reader.rs  writer.rs
src/gui/: main.rs
website/: index.html
