[package]
name = "exif-ai"
version = "0.2.1"
edition = "2024"
description = "AI-powered EXIF metadata writer — generate SEO titles, descriptions, tags, GPS, and subject data for images"
license = "MIT"
repository = "https://github.com/marirs/exif-ai"
homepage = "https://exif-ai.com"
authors = ["Sriram Govindan"]
exclude = [".github", "docs", "tests", "examples", "target", "Cargo.lock", "data", "models", "website"]
keywords = ["exif", "metadata", "ai", "gps", "image"]
categories = ["multimedia::images", "command-line-utilities"]

[lib]
name = "exif_ai"
path = "src/lib.rs"

[[bin]]
name = "exif-ai-cli"
path = "src/cli/main.rs"
required-features = ["cli"]

[[bin]]
name = "exif-ai-gui"
path = "src/gui/main.rs"
required-features = ["gui"]

[features]
default = ["cli"]
cli = ["clap", "env_logger"]
gui = ["eframe", "egui_extras", "rfd", "env_logger"]

[dependencies]
# CLI (optional — only needed for the binary)
clap = { version = "4", features = ["derive"], optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image handling
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
base64 = "0.22"

# EXIF read
nom-exif = "2.7"

# EXIF/metadata write
little_exif = "0.4"
img-parts = "0.3"

# Logging
env_logger = { version = "0.11", optional = true }
log = "0.4"

# Error handling
anyhow = "1"

# Async trait
async-trait = "0.1"

# Local AI model (BLIP image captioning)
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
hf-hub = { version = "0.4", default-features = false, features = ["tokio", "rustls-tls"] }

# File walking
walkdir = "2"

# GUI (optional — only needed for the desktop app)
eframe = { version = "0.33", optional = true, default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui_extras = { version = "0.33", optional = true, features = ["image"] }
rfd = { version = "0.17", optional = true }

# macOS: use Accelerate (BLAS) + Metal (GPU) for fast Apple Silicon inference
[target.'cfg(target_os = "macos")'.dependencies]
accelerate-src = "0.3"
candle-core = { version = "0.8", features = ["accelerate", "metal"] }

# ── macOS .app bundle configuration ──────────────────────────────────
[package.metadata.bundle.bin.exif-ai-gui]
name = "Exif AI"
identifier = "com.marirs.exif-ai"
category = "public.app-category.photography"
short_description = "AI-powered EXIF metadata writer"
long_description = "Generate SEO titles, descriptions, tags, GPS coordinates, and subject data for images using AI vision models."
copyright = "Copyright (c) Sriram Govindan"
osx_minimum_system_version = "11.0"
icon = ["assets/icon.icns"]

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[dev-dependencies]
tempfile = "3"
